feat: route to retrieves user image
